# recipes_server

./: .env  .gitignore  Cargo.toml
.github/workflows/: xibalba_rocket.yml
src/: guards.rs  helpers.rs  main.rs  models.rs
src/helpers/: mod.rs  recipes.rs  users.rs
src/routes/: mod.rs  recipes.rs  users.rs
