[package]
name = "rocket_recipes"
version = "0.1.0"
authors = ["Baakel <thrauglor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
neo4rs = "0.5"
tokio = "1.5"
dotenv = "0.15"
validator = { version="0.13", features=["derive"] }
serde = { version="1", features=["derive"] }
serde_json = "1.0"
uuid = { version="0.8", features=["serde", "v4"] }
argon2 = "0.1"
rand_core = { version="0.6", features=["std"] }
rand = "0.8"
chrono = "0.4"
itertools = "0.10"
#oso = "0.12"
#oso-derive = "0.12"
